--- a/_posts/2016-10-22-ML2016.md
+++ b/_posts/2016-10-22-ML2016.md
@@ -18,8 +18,12 @@ A structural or functional pattern of neuroplasticity that could systematically 
 ### Subjects & Methods
 * 26 MP, 25 MI, and 21 HCs (age and sex matched) 
 * T1-weighted and resting-state functional MRI at 3 T
-* support vector machine (SVM) based classification 
-* LOOCV is used to calculate the model performance. 
+* Support vector machine (SVM) based classification 
+* LOOCV is used to calculate the model performance 
+
+![]({{ site.baseurl }}/images/ML_MS_Fig1.png)
+
+![]({{ site.baseurl }}/images/ML_MS_Fig2.png)
 
 ### Results & Conlcusion
 
