--- a/_posts/2016-10-22-ML2016.md
+++ b/_posts/2016-10-22-ML2016.md
@@ -23,6 +23,8 @@ A structural or functional pattern of neuroplasticity that could systematically 
 
 ![]({{ site.baseurl }}/images/ML_MS_Fig1.png)
 
+The figure above shows the flow of feature extraction. And the figure below shows the flow of feature reduction and SVM classification flow.
+
 ![]({{ site.baseurl }}/images/ML_MS_Fig2.png)
 
 ### Results & Conlcusion
