--- a/_posts/2016-6-22-HBM2016.md
+++ b/_posts/2016-6-22-HBM2016.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Machine Learning Approach to Find Brain Structural & Functional pattern Distinguishing Motor Disability in People with Multiple Sclerosis    
+title: Abnormal functional connectivity and cortical integrity influence dominant hand motor disability in multiple sclerosis: a multimodal analysis    
 ---
 
 ### Background
