update HBM_MS paper titlecolon2

--- a/_posts/2016-6-22-HBM2016.md
+++ b/_posts/2016-6-22-HBM2016.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Abnormal functional connectivity and cortical integrity influence dominant hand motor disability in multiple sclerosis: A""
+title: "Abnormal functional connectivity and cortical integrity influence dominant hand motor disability in multiple sclerosis &#58; A""
 ---
 
 test
