update HBM_MS paper

--- a/_posts/2016-6-22-HBM2016.md
+++ b/_posts/2016-6-22-HBM2016.md
@@ -1,17 +1,16 @@
 ---
 layout: post
-title: Abnormal functional connectivity and cortical integrity influence dominant hand motor disability in multiple sclerosis- a multimodal analysis
+title: Abnormal functional connectivity and cortical integrity influence dominant hand motor disability in multiple sclerosis - a multimodal analysis
 ---
 
 ### Background
-
-Previous functional MRI (fMRI) studies involving dominant hand motor tasks suggest  functional reorganization occurs in the brains of people with multiple sclerosis (MS) throughout the disease course, potentially explaining the low correlation between structural degeneration and disability [1-4]. However, the relationship between resting state functional connectivity (rsFC) reorganization in the sensorimotor network and motor disability in MS is not clear yet. Such information would improve our understanding of the mechanisms underlying motor impairment and may guide future treatments to preserve functional ability. 
+Previous functional MRI (fMRI) studies involving dominant hand motor tasks suggest functional reorganization occurs in the brains of people with multiple sclerosis (MS) throughout the disease course, potentially explaining the low correlation between structural degeneration and disability [1-4]. However, the relationship between resting state functional connectivity (rsFC) reorganization in the sensorimotor network and motor disability in MS is not clear yet. Such information would improve our understanding of the mechanisms underlying motor impairment and may guide future treatments to preserve functional ability. 
 
 ### Aim
 This study investigated changes in rsFC of the left hemisphere hand motor (LM1) region between MS participants with and without right hand dysfunction, compared to healthy controls (HC). Structural abnormalities of grey matter volume and magnetization transfer ratio (MTR) values measured at the global level and within regions with rsFC abnormalities in people with MS, were also investigated.
 
 ### Data Collection
-* Right-handed participants underwent T1-weighted MRI, magnetization transfer (MT) images and resting-state functional MRI with their eyes closed. 
+* Right-handed participants underwent T1-weighted MRI,T2-weighted MRI, magnetization transfer (MT) images and resting-state functional MRI with their eyes closed. 
 * The 9-hole peg test (9HPT) was performed as a measure of hand motor performance outside of the scanner. 
 * MS participants were considered as motor preserved (MP) if they scored within two standard deviations (SDs) of published norms [5] with the right hand on the 9HPT and as motor impaired (MI) if they scored two SDs or more. 
 * 26 MP, 17 MI, and 20 HCs (age and sex matched) 
@@ -26,16 +25,18 @@ This study investigated changes in rsFC of the left hemisphere hand motor (LM1) 
 
 The figure above shows the end-to-end image processing, statistical analysis (hypothesis testing).
 
-### Results & Conlcusion
+### Results
 
 The figure below shows the functional network of the LM1 for the HC, MP, and MI groups. 
+
 ![]({{ site.baseurl }}/images/HBM_MS_Fig2.png)
 
-* Compared to the HC group, the MP group shows a more widespread functional network of the LM1, the MI group shows a more limited functional network of the LM1
-* Brain structures, FC of the LM1 and clinical manifestations of MS are linked together
-* In structurally intact regions (with normal grey matter volume and MTR values) outside of the traditional motor network, stronger FC of the LM1 may mitigate motor impairment in MS
-* Within regions of the traditional motor network that have lower grey matter volume, weaker FC of the LM1 may contribute to worse hand motor impairment in MS
+* Motor preserved MS participants had stronger FC in structurally intact visual information processing regions relative to motor impaired MS participants. 
+* Motor impaired MS participants showed weaker FC in the sensorimotor and somatosensory association cortices and more severe structural damage throughout the brain compared with the other groups. 
+* Logistic regression analysis showed that regional MTR predicted motor disability beyond the impact of global atrophy whereas regional grey matter volume did not. 
+* More importantly, as the first multimodal analysis combining resting-state fMRI,T1-weighted, T2-weighted and MTR images in MS, we demonstrate how a combination of structural and functional changes may contribute to motor impairment or preservation in MS. 
 
+For more details of the results please refer to the information section below.
 ### References
 
 1.Ceccarelli  et al., Eur J Neurosci. 2010 (31): 1273-80.
