--- a/_posts/2010-12-22-NIMG2009.md
+++ b/_posts/2010-12-22-NIMG2009.md
@@ -9,3 +9,8 @@ Cortical surface-based analysis has been widely used in anatomical and functiona
 ![]({{ site.baseurl }}/images/MMLmap_sulci_dealination.gif)
 
 https://github.com/sectore/jekyll-swfobject
+
+![]({{ site.baseurl }}/images/MM_map_showwithtemp.swf)
+### Information
+
+This study is publshed in NeuroImage 49.1 (2010): 355-365. For more information please head over to [the paper](http://dx.doi.org/10.1016/j.neuroimage.2009.08.026).
