add pigtemp deco pic2

--- a/_posts/2016-11-22-Pigtemp.md
+++ b/_posts/2016-11-22-Pigtemp.md
@@ -4,7 +4,7 @@ title: An In vivo Multi-Modal Structural Template for Neonatal Piglets Using Hig
 excerpt_separator: <!--more-->
 ---
 
-![]({{ site.baseurl }}/images/pigtemplate_sag2.png)
+![]({{ site.baseurl }}/images/pigtemp_deco.png)
 <!--more-->
 
 An increasing number of applications use the postnatal piglet model in neuroimaging studies, however, these are based primarily on T1 weighted image templates. There is a growing need for a multimodal structural brain template for a comprehensive depiction of the piglet brain, particularly given the growing applications of diffusion weighted imaging for characterizing tissue microstructures and white matter organization. 
