add hbm2016 deco pic

--- a/_posts/2016-6-22-HBM2016.md
+++ b/_posts/2016-6-22-HBM2016.md
@@ -1,7 +1,11 @@
 ---
 layout: post
 title: Abnormal functional connectivity and cortical integrity influence dominant hand motor disability in multiple sclerosis - a multimodal analysis
+excerpt_separator: <!--more-->
 ---
+![]({{ site.baseurl }}/images/HBM_MS_deco.png)
+
+<!--more-->
 
 ### Background
 Previous functional MRI (fMRI) studies involving dominant hand motor tasks suggest functional reorganization occurs in the brains of people with multiple sclerosis (MS) throughout the disease course, potentially explaining the low correlation between structural degeneration and disability [1-4]. However, the relationship between resting state functional connectivity (rsFC) reorganization in the sensorimotor network and motor disability in MS is not clear yet. Such information would improve our understanding of the mechanisms underlying motor impairment and may guide future treatments to preserve functional ability. 
