add MS2016 deco pic

--- a/_posts/2016-10-22-ML2016.md
+++ b/_posts/2016-10-22-ML2016.md
@@ -1,7 +1,11 @@
 ---
 layout: post
 title: Machine Learning Approach to Find Brain Structural & Functional pattern Distinguishing Motor Disability in People with Multiple Sclerosis    
+excerpt_separator: <!--more-->
 ---
+![]({{ site.baseurl }}/images/ML_MS_deco.png)
+
+<!--more-->
 
 ### Background
 
