add mm-lddmm paper

--- a/_posts/2010-12-22-NIMG2009.md
+++ b/_posts/2010-12-22-NIMG2009.md
@@ -2,15 +2,46 @@
 layout: post
 title: Multi-manifold diffeomorphic metric mapping for aligning cortical hemispheric surfaces
 ---
-##Abstract
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+### Introduction
 
-Cortical surface-based analysis has been widely used in anatomical and functional studies because it is geometrically appropriate for the cortex. One of the main challenges in the cortical surface-based analysis is to optimize the alignment of the cortical hemispheric surfaces across individuals. In this paper, we introduce a multi-manifold large deformation diffeomorphic metric mapping (MM-LDDMM) algorithm that allows simultaneously carrying the cortical hemispheric surface and its sulcal curves from one to the other through a flow of diffeomorphisms. We present an algorithm based on recent derivation of a law of momentum conservation for the geodesics of diffeomorphic flow. Once a template is fixed, the space of initial momentum becomes an appropriate space for studying shape via geodesic flow since the flow at any point on curves and surfaces along the geodesic is completely determined by the momentum at the origin. We solve for trajectories (geodesics) of the kinetic energy by computing its variation with respect to the initial momentum and by applying a gradient descent scheme. The MM-LDDMM algorithm optimizes the initial momenta encoding the anatomical variation of each individual relative to a common coordinate system in a linear space, which provides a natural scheme for shape deformation average and template (or atlas) generation. We applied the MM-LDDMM algorithm for constructing the templates for the cortical surface and 14 sulcal curves of each hemisphere using a group of 40 subjects. The estimated template shape reflects regions which are highly variable across these subjects. Compared with existing single-manifold LDDMM algorithms, such as the LDDMM-curve mapping and the LDDMM-surface mapping, the MM-LDDMM mapping provides better results in terms of surface to surface distances in five predefined regions.
+Surface-based analysis, in particular, surface-based registration for optimizing the alignment of anatomical and functional data across individuals, has received great attention in both anatomical and functional studies in magnetic resonance imaging (MRI). We present a multi-manifold large deformation diffeomorphic metric mapping (MM-LDDMM) algorithm that allows to simultaneously carrying the cortical hemispheric surface (2-dimensional manifold) and its sulcal curves (1-dimensional manifold) from one to the other through a flow of diffeomorphisms via initial momenta to register cortical surfaces [1].
 
-![]({{ site.baseurl }}/images/MMLmap_sulci_dealination.gif)
+### Method
 
-https://github.com/sectore/jekyll-swfobject
+The MM-LDDMM incorporates anatomical prior knowledge through labelled sulcal/gyral curves and cortical geometry represented by the cortical surface in order to optimize the cortical alignment globally and locally across subjects. We associated the MM-LDDMM with a variational problem defined as 
 
-![]({{ site.baseurl }}/images/MM_map_showwithtemp.swf)
+$$ J(\alpha_0)=inf_{\alpha_0,\phi_0=id}\sum_{i=1}^n \sum_{j=1}^n \alpha_j(0)*[k_v(x_i(0),x_j(0))\alpha_i(0)] $$
+$$ \qquad  + \sum_{i=1}^{n_c}E_{\gamma_i} \phi_1 \bullet [\gamma_{temp}^i,\gamma_{targ}^i) + \sum_{i=1}^{n_s} E_{S_i} \phi_1 \bullet (S_{temp}^i,S_{targ}^i)  $$
+              
+where the first term quantifies the metric distance of the geodesic connecting two cortical hemispheric surfaces through initial momenta in a Hilbert space of smooth vectors. The initial momenta encode shape variation from one cortex to the other in a linear space, which provides a convenient way to compute shape average (see results) [2]. The last two terms respectively quantify the similarity between labelled curves and surfaces via vector-valued measures that incorporate the first-order geometry of the sulcal curves and cortical surfaces. In practice, we incorporated 14 sulcal curves (see the above figure) due to high reproducibility and the cortical hemispheric surface in the MM-LDDMM algorithm. A gradient descent algorithm seeks the optimal geodesic to transform one cortex to the other.
+
+![]({{ site.baseurl }}/images/MMmap_sulci_dealination.gif)
+
+Figure 1 shows fourteen sulcal curves are illustrated in the lateral, medial, and basal views of the cortical surfaces.
+
+### Results
+![]({{ site.baseurl }}/images/MMmap_result.png)
+
+Figure 2 above illustrates an example of the MM-LDDMM mapping results with the template surface (in green) superimposed with the target surface (in yellow). The visual comparison of the top row with the bottom row on each panel indicates the deformed template surface is well aligned with the target surface both globally and locally. 
+
+The MM-LDDMM algorithm optimizes the initial momenta encoding the anatomical variation of each individual relative to a common coordinate system in a linear space, which provides a natural scheme for shape deformation average and template (or atlas) generation. We applied the MM-LDDMM algorithm for constructing the templates for the cortical surface and 14 sulcal curves of each hemisphere using a group of 40 subjects. The estimated template shape reflects regions which are highly variable across these subjects. 
+
+![]({{ site.baseurl }}/images/MMmap_template.png)
+
+Figure 3 shows the initial template and estimated template of the left hemisphere. The arrow on panel A points out the region that becomes less deep or less sharp on the estimated template. 
+
+Compared with existing single-manifold LDDMM algorithms, such as the LDDMM-curve mapping [3] and the LDDMM-surface mapping [4], the MM-LDDMM mapping provides better results in terms of surface to surface distances in five predefined regions. For more details of the comparison, please refer to [the original paper](http://dx.doi.org/10.1016/j.neuroimage.2009.08.026).
+
+### Conclusion
+
+The MM-LDDMM algorithm registers the cortical hemispheric surfaces to achieve local alignment accuracy through the sulcal curves and global alignment accuracy through the geometry of the triangulated meshes of the cortex. Compared with the LDDMM-curve and surface mappings algorithms, the MM-LDDMM algorithm improves the cortical surface registration. The estimated template is representative and close to each individual subject by comparing the metric distance before and after the template estimation. 
+
+### References
+1. Zhong, J., Qiu, A., NeuroImage, in submission, 2009. 
+2. Vaillant, M., Miller, M. I., etc, NeuroImage, 23: 161-169, 2004. 
+3. Glaunès, J., Qiu, A., etc, International Journal of Computer Vision, 80 : 317-336, 2008.
+4. Vaillant, M., Qiu, A., etc, NeuroImage, 34: 1149-1159, 2007.
 
 ### Information
 
