add mm deco png in mm post

--- a/_posts/2010-12-22-NIMG2009.md
+++ b/_posts/2010-12-22-NIMG2009.md
@@ -3,6 +3,9 @@ layout: post
 title: Multi-manifold diffeomorphic metric mapping for aligning cortical hemispheric surfaces
 ---
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+![]({{ site.baseurl }}/images/MM_LDDMM_deco.png)
+
 ### Introduction
 
 Surface-based analysis, in particular, surface-based registration for optimizing the alignment of anatomical and functional data across individuals, has received great attention in both anatomical and functional studies in magnetic resonance imaging (MRI). We present a multi-manifold large deformation diffeomorphic metric mapping (MM-LDDMM) algorithm that allows to simultaneously carrying the cortical hemispheric surface (2-dimensional manifold) and its sulcal curves (1-dimensional manifold) from one to the other through a flow of diffeomorphisms via initial momenta to register cortical surfaces [1].
