--- a/_posts/2010-12-22-NIMG2009.md
+++ b/_posts/2010-12-22-NIMG2009.md
@@ -5,6 +5,7 @@ title: Multi-manifold diffeomorphic metric mapping for aligning cortical hemisph
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 ![]({{ site.baseurl }}/images/MM_LDDMM_deco.png)
+<!--more-->
 
 ### Introduction
 
