--- a/_posts/2016-10-22-ML2016.md
+++ b/_posts/2016-10-22-ML2016.md
@@ -41,4 +41,4 @@ This study demonstrates that there exist structural and FC patterns sufficient f
 
 ### Information
 
-This study is publshed in Brain Imaging and Behavior, 2016 (DOI 10.1007/s11682-016-9551-4). For more information please head over to [the paper](http://link.springer.com/article/10.1007/s11682-016-9551-4).
+This study is published in Brain Imaging and Behavior, 2016 (DOI 10.1007/s11682-016-9551-4). For more information please head over to [the paper](http://link.springer.com/article/10.1007/s11682-016-9551-4).
